<?xml version="1.0"?>
<package format="2">
  <name>project11_robot</name>
  <version>0.0.0</version>
  <description>
    Project11 packages related to a robot which can be controlled
  </description>

  <author email="roland@ccom.unh.edu">Roland Arsenault</author>
  <maintainer email="roland@ccom.unh.edu">Roland Arsenault</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>project11_platform</exec_depend>
  <exec_depend>helm_manager</exec_depend>
  <exec_depend>hover</exec_depend>
  <exec_depend>mission_manager</exec_depend>
  <exec_depend>mpc</exec_depend>
  <exec_depend>path_follower</exec_depend>
  <exec_depend>path_planner</exec_depend>
  
</package>
